Fix volume control jump at different volumes

--- a/src/renderer/components/VolumeControl/VolumeControl.module.css
+++ b/src/renderer/components/VolumeControl/VolumeControl.module.css
@@ -1,5 +1,6 @@
 .volumeControlContainer {
   position: relative;
+  width: 35px;
 }
 
 .volumeControl {
